# src/modules/ai/dto/api/performance.question.request.dto.ts
@@ -1,0 +1,11 @@
+import { PerformanceRequestDto } from "./performance.request.dto";
+
+export interface PerformanceQuestionRequestDto {
+  originalRequest: PerformanceRequestDto;
+  answers: QuestionAnswerDto[];
+}
+
+export interface QuestionAnswerDto {
+  question: string;
+  answer: string;
+}
