# src/modules/ai/dto/api/performance.response.dto.ts
@@ -1,8 +1,19 @@
-export interface PerformancePreviewResponseDto {
-  summary: string;
-  growthInsights: string[];
-  nextActions: string[];
-  taskPerformances: TaskPerformanceDto[];
+export interface PerformanceResponseDto {
+  status:
+    | "QUESTION_REQUIRED"
+    | "COMPLETED";
+
+  supplementQuestions?: SupplementQuestionDto[];
+  summary?: string;
+  growthInsights?: string[];
+  nextActions?: string[];
+  taskPerformances?: TaskPerformanceDto[];
+}
+
+
+export interface SupplementQuestionDto {
+  question: string;
+  reason: string;
 }
 
 
